--- a/src/SlideMeister/MainWindow.xaml
+++ b/src/SlideMeister/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SlideMeister"
         mc:Ignorable="d"
-        Title="SlideMeister" Height="350" Width="525">
+        Title="SlideMeister" Height="350" Width="525" SizeChanged="Window_SizeChanged">
     <Canvas x:Name="BackgroundCanvas">
         
     </Canvas>
