--- a/src/SlideMeister/MainWindow.xaml
+++ b/src/SlideMeister/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SlideMeister.MainWindow"
+﻿<Window xmlns:Control="clr-namespace:SlideMeister.Control"  x:Class="SlideMeister.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SlideMeister"
         mc:Ignorable="d"
-        Title="SlideMeister" Height="700" Width="900" SizeChanged="Window_SizeChanged">
+        Title="SlideMeister" Height="700" Width="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -24,8 +24,7 @@
                 </MenuItem>
             </MenuItem>
         </Menu>
-        <Canvas x:Name="BackgroundCanvas" Grid.Row="1" Grid.Column="0">
-        </Canvas>
+        <Control:SlideControl Grid.Row="1" Grid.Column="0" x:Name="SlideCanvas"/>
         <TabControl Grid.Row="2" Grid.Column="0" >
             <TabItem>
                 <TabItem.Header>States</TabItem.Header>
