--- a/src/SlideMeister/Control/AboutDialog.xaml
+++ b/src/SlideMeister/Control/AboutDialog.xaml
@@ -16,7 +16,7 @@
         </TextBlock>
 
 
-        <Button Click="CloseOnClick" HorizontalAlignment="Right">Close</Button>
+        <Button Click="CloseOnClick" HorizontalAlignment="Right" IsCancel="True">Close</Button>
         
     </StackPanel>
 </Window>
