--- a/src/SlideMeister/Control/AboutDialog.xaml
+++ b/src/SlideMeister/Control/AboutDialog.xaml
@@ -5,14 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SlideMeister.Control"
         mc:Ignorable="d"
-        Title="About" Width="400" WindowStartupLocation="CenterOwner" SizeToContent="Height" >
+        Title="About" Width="400" WindowStartupLocation="CenterOwner" SizeToContent="Height" ResizeMode="NoResize" >
     <StackPanel Margin="10" HorizontalAlignment="Center">
         <TextBlock HorizontalAlignment="Center" FontWeight="Bold" x:Name="ApplicationTitle">Slide Meister</TextBlock>
         <TextBlock HorizontalAlignment="Center">Author: <Hyperlink NavigateUri="mailto:brenn@depon.net">Martin Brenn</Hyperlink></TextBlock>
         <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap">This application may be distributed for free. I'd also take free beer. </TextBlock>
         <TextBlock HorizontalAlignment="Center">
             <Hyperlink NavigateUri="http://www.depon.net">
-            http://www.depon.net/        </Hyperlink>
+            http://www.depon.net/</Hyperlink>
+        </TextBlock>
+        <TextBlock HorizontalAlignment="Center">
+            Source: <Hyperlink NavigateUri="http://www.depon.net">
+                http://github.com/mbrenn/slidemeister/</Hyperlink>
         </TextBlock>
 
 
